Wire up endpoints
